--- a/Tweetly MVC.csproj
+++ b/Tweetly MVC.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="5.0.7" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
