Database işlemleri ve cinsyet tahmin eklendi.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Baglanti": "Data Source=.\\SQLEXPRESS;Initial Catalog=TweetlyDataBase;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
