--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "UserSettings": {
+    "Username": "7mesaleciler",
+    "Pass": "HelloWorld18881",
+    "SQLServerName": ".\\SQLEXPRESS"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
