--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "ConnectionStrings": {
-    "Baglanti": "Data Source=.\\SQLEXPRESS;Initial Catalog=TweetlyDataBase;Integrated Security=True"
+  "UserSettings": {
+    "Username": "",
+    "Pass": "123",
+    "SQLServerName": ".\\SQLEXPRESS"
   },
   "Logging": {
     "LogLevel": {
