--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+appsettings.Development.json
 Test.cs
 
 # User-specific files (MonoDevelop/Xamarin Studio)
