--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,9 @@ dotnet_diagnostic.CA1050.severity = none
 
 # IDE0022: Metotlar için ifade gövdesi kullan
 dotnet_diagnostic.IDE0022.severity = none
+
+# IDE0051: Kullanılmayan özel üyeleri kaldır
+dotnet_diagnostic.IDE0051.severity = none
+
+# IDE0059: Bir değerin gereksiz ataması
+dotnet_diagnostic.IDE0059.severity = none
